# rugar

./: Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: .main.rs.swo  main.rs
entities/: Cargo.toml
entities/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: .main.rs.swp  main.rs
