[package]
name = "entities"
version = "0.1.0"
authors = ["Andrei Oprea <andrei.br92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
