[package]
name = "server"
version = "0.1.0"
authors = ["Andrei Oprea <andrei.br92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.9"
serde_json = "1.0"
serde_derive = "1.0.9"
ws = "0.7.3"
entities = { path = "../entities" }
